syntax = "proto3";

package chat;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/dmitriy-smirnov-0301/chat-app/chat-service/pkg/proto/chat/v1;chatpb";

service ChatService {
	rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
	rpc ConnectChat(ConnectChatRequest) returns (ConnectChatResponse);
	rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
	rpc EditMessage(EditMessageRequest) returns (google.protobuf.Empty);
	rpc DeleteMessage(DeleteMessageRequest) returns (google.protobuf.Empty);
	rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
}

message CreateChatRequest {
	repeated string usernames = 1;
}
  
message CreateChatResponse {
	int64 chat_id = 1;
}
  
message ConnectChatRequest {
	int64 chat_id = 1;
	string username = 2;
}
  
message ConnectChatResponse {
	string welcome_message = 1;
}
  
message SendMessageRequest {
	int64 chat_id = 1;
	string from = 2;
	string text = 3;
	google.protobuf.Timestamp timestamp = 4;
}
  
message EditMessageRequest {
	int64 chat_id = 1;
	int64 message_id = 2;
	string new_text = 3;
}
  
message DeleteMessageRequest {
	int64 chat_id = 1;
	int64 message_id = 2;
}
  
message DeleteChatRequest {
	int64 chat_id = 1;
}
